# Fashion-Recommender

./: .dockerignore  .gitignore  .md  Dockerfile  README.md  app.py  fast.py  main.py  pathfix.py  pyproject.toml  requirements.txt  streamlit_app.py  temp.py
api/: __init__.py  dependencies.py  main.py
api/routers/: __init__.py  predict.py
api/templates/: index.html
artifacts/: filenames.pkl
logger/: __init__.py
notebook/: main.ipynb
src/fashion_recommender/: __init__.py
src/fashion_recommender/components/: __init__.py  feature_extractor.py  recommender.py
src/fashion_recommender/constants/: __init__.py
src/fashion_recommender/pipeline/: __init__.py  prediction_pipeline.py  training_pipeline.py
src/fashion_recommender/tests/: run_pred.py  run_train.py
src/fashion_recommender/utils/: __init__.py
